--- a/finvizrepo.ipynb
+++ b/finvizrepo.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **WEBSCRAPING FROM FINVIZ**\n",
+        "# **GET FUNDAMENTALS FROM FINVIZ**\n",
         "\n",
         "When I started this repo, my main goal was to get the financial information of the companies through Finviz.com. At this point, I used the formulas on the https://finvizfinance.readthedocs.io/ website. \n",
         "\n",
