--- a/finvizrepo.ipynb
+++ b/finvizrepo.ipynb
@@ -21,7 +21,7 @@
         "\n",
         "When I started this repo, my main goal was to get the financial information of the companies through Finviz.com. At this point, I used the formulas on the https://finvizfinance.readthedocs.io/ website. \n",
         "\n",
-        "> *As the first step, we install finvizfinance."
+        "> *As the 1st step, we install finvizfinance."
       ],
       "metadata": {
         "id": "nvHJ-HT7UAEt"
